--- a/src/qt/blocknode.qrc
+++ b/src/qt/blocknode.qrc
@@ -59,6 +59,8 @@
         <file alias="automint_inactive">res/icons/automint_inactive.png</file>
         <file alias="import">res/icons/import_0.png</file>
         <file alias="commit">res/icons/commit.png</file>
+        <file alias="hd_enabled">res/icons/hd_enabled.png</file>
+        <file alias="hd_disabled">res/icons/hd_disabled.png</file>
     </qresource>
     <qresource prefix="/css">
         <file alias="default">res/css/default.css</file>
